--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
      <h1>Hello Bhailog!!!</h1>
+     <br>
+     <a href="/register"><button>Register</button></a>
+     <br>
+     <br>
+     <a href="/login"><button>login</button></a>
 </body>
 </html>
